--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     gap:10px;
     justify-content: left;
     align-items: flex-start;
+
    
 }
 
@@ -16,9 +17,11 @@
     display: flex;
     justify-content:space-between;
     align-items:center;
+    width: 100%;
 }
 
 .customized-sec{
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: left;
