--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@
 
 #time-section{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items:center;
     width: 100%;
+    margin-left: 100px;
 }
 
 .customized-sec{
@@ -29,6 +30,9 @@
     gap: 10px;
 }
 
+.timer-btns{
+    margin-right: 100px;
+}
 span{
    font-size: 10rem;
    opacity: 50%;
@@ -36,11 +40,13 @@ span{
 
 .btn{
     border-radius: 50%;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 2rem;
     margin: 4px 2px;
     cursor: pointer;
+    color: rgb(174, 168, 168);
+    
 }
