--- a/style.css
+++ b/style.css
@@ -1,44 +1,43 @@
-
-.navbar{
+.navbar {
     height: 400px;
 }
-.container-fluid{
+
+.container-fluid {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    gap:10px;
+    gap: 10px;
     justify-content: left;
     align-items: flex-start;
-
-   
 }
 
-#time-section{
+#time-section {
     display: flex;
-    justify-content:space-around;
-    align-items:center;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
     margin-left: 100px;
 }
 
-.customized-sec{
+.customized-sec {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: left;
-    align-items:flex-start;
+    align-items: flex-start;
     gap: 10px;
 }
 
-.timer-btns{
+.timer-btns {
     margin-right: 100px;
 }
-span{
-   font-size: 10rem;
-   opacity: 50%;
+
+span {
+    font-size: 10rem;
+    opacity: 50%;
 }
 
-.btn{
+.btn {
     border-radius: 50%;
     padding: 30px;
     text-align: center;
@@ -48,5 +47,8 @@ span{
     margin: 4px 2px;
     cursor: pointer;
     color: rgb(174, 168, 168);
-    
+}
+
+#editBtn {
+    cursor: pointer;
 }
